--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,19 +21,16 @@ jobs:
   build-nextjs:
     name: 🏗️ Build Next.js
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [22]
     steps:
       - uses: actions/checkout@v4
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
           version: 9
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 22
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
