--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "server-only": "^0.0.1",
+    "sonner": "^1.5.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
