--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,5 @@
 DATABASE_AUTH_TOKEN=""
 DATABASE_URL="libsql://whats-up-<your-username>.turso.io"
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+# Tomorrow.io
+WEATHER_API_KEY=""
