--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.11.13",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
+    "ical.js": "^2.1.0",
     "lucide-react": "^0.441.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
